# parcel2d-modflow

./: .gitignore  .pre-commit-config.yaml  pixi.toml  pyproject.toml
.github/disabled-workflows/: ci.yml  docs.yml  publish.yml
docs/: about.md  api_reference.md  conf.py  documentation.md  index.md  user_guide.md
docs/_static/: theme-deltares.css
docs/user_guide/: modules.md  overview.md
src/parcel2d_modflow/: __init__.py  _exceptions.py  _io.py  base.py  components.py  logging.py  modeldata.py  utils.py  validation.py
src/parcel2d_modflow/_io/: geopackage.py  read.py  soilmap.py
src/parcel2d_modflow/mf/: budget_file.py  model.py  module.py
tests/: conftest.py  test_base.py  test_brosoilmap.py  test_geopackage.py  test_logging.py  test_modeldata.py  test_placeholder.py  test_utils.py
tests/_io/: test_read.py
tests/data/: lhm_confining.nc  lhm_flux.nc  lhm_phreatic_head.nc  lhm_recharge.nc  test_invalid_soilmap_v2023.gpkg  test_soilmap_v2023.gpkg
tests/mf/: test_module.py
