[project]
maintainers = [
    {name = "Bas Knaake", email = "bas.knaake@deltares.nl"},
]
dependencies = [
    "loguru"
]
name = "parcel2d-modflow"
requires-python = ">=3.12"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "SOMERS",
    "Parcels",
	"Groundwater modelling",
    "MODFLOW",
	"Deltares",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/parcel2d_modflow/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/parcel2d_modflow"]

[tool.hatch.build.targets.sdist]
only-include = ["src/parcel2d_modflow", "tests"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
	"unittest: test of single component",
	"integrationtest: test of multiple components",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I001", "NPY201"]
ignore = ["F401", "E501", "F811"]
unfixable = ["F401"]
pydocstyle.convention = "numpy"
